--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -8,6 +8,7 @@
     position: fixed;
     z-index: 1000
 }
+
 /* ///////////////////////// */
 .content-header {
 
@@ -50,19 +51,20 @@
     font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
 /* ///////////////////////// */
 
- .content-grid {/* is a grid */
+.content-grid {
+    /* is a grid */
     background: #000;
     color: white;
 
 }
+
 .card-img-top {
     /* min-width: 100%; */
-    max-height: 100%;
+    /* max-height: 100%; */
 }
 
 
-.projects-row{
-    
-}
+.projects-row {}
