--- a/DI_Bootcamp_Stage1/CSS-Basics/Resume/style.css
+++ b/DI_Bootcamp_Stage1/CSS-Basics/Resume/style.css
@@ -26,7 +26,7 @@
 
  .namediv {
      /* background-color: rgb(255, 0, 174); */
-     display: flex;
+     /* display: flex;   */
      flex-direction: column;
      width: 30%;
      /* height: 100%; */
@@ -37,14 +37,16 @@
 
  .name {
      margin: 0;
+     text-transform: uppercase;
+
  }
 
 
 
 
  .picdiv {
-     display: flex;
-     flex-direction: column;
+     /* display: flex; */
+     /* flex-direction: column; */
      width: 30%;
      height: auto;
  }
@@ -73,7 +75,7 @@
 
 
  .seperator {
-     width: 100%;
+     /* width: 100%; */
      margin: auto;
  }
 
